--- a/JITL/BPIC_JITL_hp_tuning.ipynb
+++ b/JITL/BPIC_JITL_hp_tuning.ipynb
@@ -334,14 +334,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Processing dataset: bpic2017_accepted\n",
-      "Test mode: True\n"
+      "Processing dataset: production\n",
+      "Test mode: False\n"
      ]
     }
    ],
    "source": [
-    "dataset_name = 'bpic2017_accepted'\n",
-    "test_mode = True\n",
+    "dataset_name = 'production'\n",
+    "test_mode = False\n",
     "\n",
     "# # Parse command-line arguments\n",
     "# parser = argparse.ArgumentParser(description=\"Process dataset name and test mode as arguments.\")\n",
@@ -560,7 +560,7 @@
      "output_type": "stream",
      "text": [
       "Parameter grid established in 0.00 seconds.\n",
-      "Data preprocessing completed in 5.91 seconds.\n"
+      "Data preprocessing completed in 0.01 seconds.\n"
      ]
     }
    ],
@@ -614,12 +614,12 @@
      "text": [
       "Experimenting with baseline version\n",
       "Now training\n",
-      "Training time:  0.09929153521855673  minutes\n",
+      "Training time:  0.0043944795926411945  minutes\n",
       "Now predicting\n",
-      "Accuracy: 0.83\n",
-      "f1_score: 0.8251515151515152\n",
-      "Training Time: 0.09929153521855673\n",
-      "AUC: 0.9464134125636673\n",
+      "Accuracy: 0.6695957820738138\n",
+      "f1_score: 0.6614141195825072\n",
+      "Training Time: 0.0043944795926411945\n",
+      "AUC: 0.778982438659858\n",
       "***********************************\n"
      ]
     }
@@ -900,17 +900,17 @@
      "output_type": "stream",
      "text": [
       "Testing combination: {'num_nearest_neighbors': 100, 'distance_metric': 'euclidean', 'encoding_method': 'catboost', 'model': 'Catboost', 'batch_size': 100}\n",
-      "Combination processed in 0.14 minutes.\n",
+      "Combination processed in 0.09 minutes.\n",
       "Testing combination: {'num_nearest_neighbors': 100, 'distance_metric': 'euclidean', 'encoding_method': 'count', 'model': 'Catboost', 'batch_size': 100}\n",
-      "Combination processed in 0.13 minutes.\n",
+      "Combination processed in 0.09 minutes.\n",
       "Testing combination: {'num_nearest_neighbors': 100, 'distance_metric': 'euclidean', 'encoding_method': 'onehot', 'model': 'Catboost', 'batch_size': 100}\n",
-      "Combination processed in 0.14 minutes.\n",
+      "Combination processed in 0.09 minutes.\n",
       "Testing combination: {'num_nearest_neighbors': 100, 'distance_metric': 'euclidean', 'encoding_method': 'target', 'model': 'Catboost', 'batch_size': 100}\n",
-      "Combination processed in 0.14 minutes.\n",
+      "Combination processed in 0.09 minutes.\n",
       "Testing combination: {'num_nearest_neighbors': 100, 'distance_metric': 'euclidean', 'encoding_method': 'woe', 'model': 'Catboost', 'batch_size': 100}\n",
-      "Combination processed in 0.13 minutes.\n",
+      "Combination processed in 0.09 minutes.\n",
       "Testing combination: {'num_nearest_neighbors': 100, 'distance_metric': 'euclidean', 'encoding_method': 'rank', 'model': 'Catboost', 'batch_size': 100}\n",
-      "Combination processed in 1.12 minutes.\n"
+      "Combination processed in 0.11 minutes.\n"
      ]
     }
    ],
@@ -985,7 +985,8 @@
     "    # Process batches\n",
     "    for start in range(0, len(current), batch_size):  # Batch size = 100\n",
     "        batch = current.iloc[start:start+batch_size]\n",
-    "        distances, indices = nn_model.kneighbors(current_transformed[start:start+batch_size])\n",
+    "        batch_transformed = preprocessor.transform(batch[features_used])\n",
+    "        distances, indices = nn_model.kneighbors(batch_transformed)\n",
     "        nearest_neighbors = pd.concat([historic.iloc[indices[i]] for i in range(len(batch))])\n",
     "        \n",
     "        target = nearest_neighbors[dataset_manager_data['label_col']].values\n",
@@ -1088,18 +1089,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "b7851084",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'num_nearest_neighbors': 100, 'distance_metric': 'euclidean', 'encoding_method': 'rank', 'model': 'Catboost', 'batch_size': 100}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# print(f\"Best combination: {best_result}\")\n",
     "print(best_result['params'])"
@@ -1107,7 +1100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "26ef6e2d",
    "metadata": {},
    "outputs": [],
@@ -1278,7 +1271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "id": "f5d0f659",
    "metadata": {},
    "outputs": [],
@@ -1291,7 +1284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "id": "b3ce5f94",
    "metadata": {},
    "outputs": [],
@@ -1309,7 +1302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "id": "6d090dc3",
    "metadata": {},
    "outputs": [],
@@ -1334,7 +1327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "id": "feee4a2a",
    "metadata": {},
    "outputs": [],
